--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "watch": "vue-cli-service build --watch",
+    "host": "http-server ./dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
