--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build:viewer": "cross-env BUILD_VIEWER=true vue-cli-service build",
     "gh-build:editor": "cross-env GH_BUILD=true vue-cli-service build",
     "watch": "vue-cli-service build --watch",
+    "copy-macro": "cpx ./viewer-static/* ./dist/viewer",
     "deploy:editor": "cross-env npm run gh-build:editor && gh-pages -d dist/editor -b gh-pages -f",
-    "deploy:viewer": "cross-env npm run build:viewer && gh-pages -d dist/viewer -b viewerjs -f",
+    "deploy:viewer": "cross-env npm run build:viewer && npm run copy-macro && gh-pages -d dist/viewer -b viewerjs -f",
     "deploy": "cross-env npm run deploy:editor && npm run deploy:viewer",
     "lint": "vue-cli-service lint"
   },
@@ -31,6 +32,7 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
